--- a/index.html
+++ b/index.html
@@ -514,6 +514,15 @@
                 discountedPrice: 25,
                 essenceOptions: ["Algodão","Baunilha","Bergamota","Café com Chocolate","Canela","Cappuccino","Capim Limão","Cassis e Hibisco","Cereja e Avelã","Chá Verde","Flor de Cerejeira","Folhas de Figo","Lavanda Francesa","Melancia","Morango","Mousse de Maracujá","Oceano","Pistache","Rosas","Zimbro e Madeira Guaiac"],
                 color: "Fixo"
+            },
+            {
+                id: 5,
+                name: "Vela Cafézinho",
+                images: ["Vela_Cafezinho_1.jpg", "Vela_Cafezinho_2.jpg"],
+                weight: "60g",
+                basePrice: 50,
+                essence: "Cappuccino",
+                color: "Fixo"
             }
         ];
 
