--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                 name: "Vela Cafézinho",
                 images: ["Vela_Cafezinho_1.jpg", "Vela_Cafezinho_2.jpg"],
                 weight: "60g",
-                basePrice: 50,
+                price: 50,
                 essence: "Cappuccino",
                 color: "Fixo"
             }
