--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
             {
                 id: 5,
                 name: "Vela Cafézinho",
-                images: ["Vela_Cafezinho_1.jpg", "Vela_Cafezinho_2.jpg"],
+                images: ["Cafezinho_1.jpg", "Cafezinho_2.jpg"],
                 weight: "60g",
                 price: 50,
                 essence: "Cappuccino",
