--- a/index.html
+++ b/index.html
@@ -491,8 +491,10 @@
                 id: 2,
                 name: "Vela Melancia",
                 images: ["Vela_Melancia.jpg"],
-                weight: "100g",
-                price: 45,
+                variants: [
+            { weight: "180g", price: 50 },
+            { weight: "100g", price: 45 }
+        ],
                 essence: "Melancia",
                 color: "Fixo"
             },
