--- a/index.html
+++ b/index.html
@@ -491,10 +491,8 @@
                 id: 2,
                 name: "Vela Melancia",
                 images: ["Vela_Melancia.jpg"],
-                variants: [
-            { weight: "180g", price: 50 },
-            { weight: "100g", price: 45 }
-        ],
+                weight: "180g",
+                price: 50,
                 essence: "Melancia",
                 color: "Fixo"
             },
