--- a/index.html
+++ b/index.html
@@ -523,7 +523,61 @@
                 price: 50,
                 essence: "Cappuccino",
                 color: "Fixo"
-            }
+            },
+            {
+                id: 6,
+                name: "Vela Cassis & Hibisco",
+                images: ["Cassis_Hibisco_1.jpg", "Cassis_Hibisco_2.jpg", "Cassis_Hibisco_3.jpg"],
+                weight: "170g",
+                price: 50,
+                essence: "Cassis e Hibisco",
+                color: "Fixo"
+            },
+            {
+                id: 7,
+                name: "Vela Oceano",
+                images: ["Oceano_1.jpg", "Oceano_2.jpg", "Oceano_3.jpg"],
+                weight: "200g",
+                price: 75,
+                essenceOptions: ["Oceano","Bergamota","Capim Limão","Chá Verde","Melancia","Morango","Mousse de Maracujá"],
+                color: "Fixo"
+            },
+            {
+                id: 8,
+                name: "Vela Canela",
+                images: ["Canela_1.jpg", "Canela_2.jpg", "Canela_3.jpg"],
+                weight: "110g",
+                price: 45,
+                essence: "Canela",
+                color: "Fixo"
+            },
+            {
+                id: 9,
+                name: "Vela Mousse de Maracujá",
+                images: ["Mousse_Maracuja_1.jpg", "Mousse_Maracuja_2.jpg"],
+                weight: "110g",
+                price: 45,
+                essence: "Mousse de Maracujá",
+                color: "Fixo"
+            },
+            {
+                id: 10,
+                name: "Vela Chocolate com Menta",
+                images: ["Chocolate_Menta_1.jpg", "Chocolate_Menta_2.jpg"],
+                weight: "80g",
+                price: 40,
+                essence: "Chocolate com Menta",
+                color: "Fixo"
+            },
+            {
+                id: 11,
+                name: "Vela Flor de Cerejeira",
+                images: ["Flor_Cerejeira_1.jpg", "Flor_Cerejeira_2.jpg"],
+                weight: "170g",
+                price: 50,
+                essence: "Flor de Cerejeira",
+                color: "Fixo"
+            }    
         ];
 
         let cart = [];
