--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                 images: ["Vela_Lembrancinha.jpg"],
                 weight: "30g",
                 price: 11,
-                essenceOptions: ["Algodão", "Baunilha", "Capim Limão", "Lavanda Francesa", "Morango", "Rosas"], // você pode ajustar a lista conforme suas opções
+                essenceOptions: ["Algodão","Baunilha","Bergamota","Café com Chocolate","Canela","Cappuccino","Capim Limão","Cassis e Hibisco","Cereja e Avelã","Chá Verde","Flor de Cerejeira","Folhas de Figo","Lavanda Francesa","Melancia","Morango","Mousse de Maracujá","Oceano","Pistache","Rosas","Zimbro e Madeira Guaiac"],
                 colorOptions: ["Azul", "Rosa", "Branco", "Verde", "Amarelo"],
                 description: "Essa vela pode ter sua tag ou adesivo personalizado com uma mensagem ou nome, entre em contato"    
             }
