--- a/index.html
+++ b/index.html
@@ -453,6 +453,14 @@
         <img src="Logo.png" class="header-logo" alt="Logo Brilho Alado">
         <h1>Brilho Alado</h1>
         <p>Ilumine seus momentos com a magia das nossas velas artesanais, feitas com amor para transformar ambientes e acender emoções</p>
+   <p style="margin-top: 15px; font-size: 1em; color: #4A6B7B;">
+    <strong>Conheça mais do nosso universo artesanal no Instagram!</strong>
+    Veja mais fotos, bastidores e modelos personalizados:
+    <a href="https://www.instagram.com/brilho.alado/" target="_blank" style="color: #6D8B9B; text-decoration: none; font-weight: bold;">
+        @brilho.alado
+    </a>
+</p>
+
     </div>
 
     <!-- Container de Produtos -->
